# rustus

./: .gitignore  Cargo.toml  run-e2e.sh
docs/local/claude/: initial-design.md  jvm-integration-design.md
examples/htlc-validator/: main.rs  tests.rs  validator.rs
examples/preimage-validator/: main.rs  tests.rs  validator.rs
examples/pubkey-validator/: main.rs  tests.rs  validator.rs
examples/test-starting/: test_api.rs  test_bigint.rs  test_derives.rs  test_errors.rs  test_functional_typeclass.rs  test_list.rs  test_list_at.rs  test_list_at_eval.rs  test_names.rs  test_renumber.rs  test_repr.rs  test_typeclass.rs  test_typing.rs  validator.rs  with_prelude.rs
rustus-core/: Cargo.toml
rustus-core/src/: bytestring.rs  constant.rs  data.rs  default_fun.rs  lib.rs  lower.rs  module.rs  pre_sir.rs  registry.rs  sir.rs  sir_type.rs  typeclasses.rs  typing.rs
rustus-jvm/: Cargo.toml
rustus-jvm/src/: jar.rs  jvm.rs  lib.rs
rustus-macros/: Cargo.toml
rustus-macros/src/: compile.rs  derive_data.rs  functional_typeclass.rs  lib.rs  rustus_module.rs
rustus-prelude/: Cargo.toml
rustus-prelude/src/: assoc_map.rs  builtins.rs  lib.rs  list.rs  option.rs  order.rs  pair.rs  require.rs  sorted_map.rs
rustus-prelude/src/ledger/: mod.rs  v1.rs  v3.rs
scala-loader/: build.sbt
scala-loader/examples/src/main/scala/rustus/examples/: CheckSirModule.scala  PubKeyValidator.scala
scala-loader/loader/src/main/scala/rustus/loader/: Main.scala  RustusJsonCodec.scala  RustusLoader.scala  RustusToScalus.scala
scala-loader/tests/src/main/scala/rustus/tests/: CompareSIR.scala
src/: lib.rs  main.rs
tests/: validators.rs
